--- a/WebContent/createItem.html
+++ b/WebContent/createItem.html
@@ -25,14 +25,7 @@
 	<input id="go" type="button" value="Create" />
 	<br />
 
-	<h2>Edit item</h2>
-
-	<label for="ratingEnabled">Rating enabled</label>
-	<input id="ratingEnabled" name="ratingEnabled" value="true"
-		type="checkbox" />
-	<input id="itemToEdit" type="text">
-	<input id="editButton" type="button" value="Edit" />
-	<br />
+	<h2>Add feedback session</h2>
 
 	<label for="newFBSButton">New Feedback Session</label>
 	<input id="FBSItem" type="text" />
@@ -52,6 +45,7 @@
 	<div id=items></div>
 	<br />
 
+	<script src="itemElements.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
