Refactoring HTML/JS

--- a/WebContent/createItem.html
+++ b/WebContent/createItem.html
@@ -13,18 +13,13 @@
 
 <body>
 	<h2>Create item</h2>
-
-	<label for="itemName">Item name</label>
-	<input name="itemName" id="itemName" type="text" />
-	<br />
-
-	<label for="itemDescription">Item description</label>
-	<input id="itemDescription" name="itemDescription" type="text" />
-	<br />
-
-	<input id="go" type="button" value="Create" />
-	<br />
-
+	<form id="createItemForm">
+		<label for="itemName">Item name</label> <input name="itemName"
+			id="itemName" type="text" /> <br /> <label for="itemDescription">Item
+			description</label> <input id="itemDescription" name="itemDescription"
+			type="text" /> <br /> <input id="go" type="button" value="Create" />
+		<br />
+	</form>
 	<h2>Add feedback session</h2>
 
 	<label for="newFBSButton">New Feedback Session</label>
