Refactoring HTML / js

--- a/WebContent/createItem.html
+++ b/WebContent/createItem.html
@@ -40,7 +40,7 @@
 	<div id=items></div>
 	<br />
 
-	<script src="itemElements.js"></script>
+	<script src="fb.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
