--- a/WebContent/createItem.html
+++ b/WebContent/createItem.html
@@ -42,6 +42,7 @@
 	<br />
 
 	<script src="fb.js"></script>
-	<script src="main.js"></script>
+	<script src="fb.item.js"></script>
+	<script src="createItem.js"></script>
 </body>
 </html>
