Refactoring HTML / js

--- a/WebContent/sessionInfo.html
+++ b/WebContent/sessionInfo.html
@@ -7,11 +7,12 @@
 <script
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
 </script>
-<script type="text/javascript" src="fb.js"></script>
-<script type="text/javascript" src="fb.session.js"></script>
 </head>
 <body>
 	<h2>Session info</h2>
 	<div id="fbs"></div>
+	<script type="text/javascript" src="fb.js"></script>
+	<script type="text/javascript" src="fb.session.js"></script>
+	<script type="text/javascript" src="sessionInfo.js"></script>
 </body>
 </html>
