--- a/WebContent/sessionInfo.html
+++ b/WebContent/sessionInfo.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<h2>Session info</h2>
-	<div id="fbs"></div>
+	<div id="dataView"></div>
 	<script type="text/javascript" src="fb.js"></script>
 	<script type="text/javascript" src="fb.session.js"></script>
 	<script type="text/javascript" src="sessionInfo.js"></script>
