Added: Load session info (created and closed time)

--- a/WebContent/sessionInfo.html
+++ b/WebContent/sessionInfo.html
@@ -9,8 +9,12 @@
 </script>
 </head>
 <body>
-	<h2>Session info</h2>
+
 	<div id="dataView"></div>
+	<div id="sessionInfo">
+		<h3>Session info</h3>
+	</div>
+
 	<script type="text/javascript" src="fb.js"></script>
 	<script type="text/javascript" src="fb.session.js"></script>
 	<script type="text/javascript" src="sessionInfo.js"></script>
