Commenting js Added div containers in session info html

--- a/WebContent/sessionInfo.html
+++ b/WebContent/sessionInfo.html
@@ -11,9 +11,19 @@
 <body>
 
 	<div id="dataView"></div>
-	<div id="sessionInfo">
-		<h3>Session info</h3>
-	</div>
+
+	<h3>Session info</h3>
+
+	<div id="sessionInfo"></div>
+
+	<div id="dataTypeSelection"></div>
+	<div id="dataViewSelection"></div>
+
+	<button id="updateViewButton">Update view</button>
+
+	<h3>Data view</h3>
+
+	<div id="dataView"></div>
 
 	<script type="text/javascript" src="fb.js"></script>
 	<script type="text/javascript" src="fb.session.js"></script>
