Added simple list data presentation

--- a/WebContent/sessionInfo.html
+++ b/WebContent/sessionInfo.html
@@ -9,9 +9,6 @@
 </script>
 </head>
 <body>
-
-	<div id="dataView"></div>
-
 	<h3>Session info</h3>
 
 	<div id="sessionInfo"></div>
@@ -21,9 +18,13 @@
 
 	<button id="updateViewButton">Update view</button>
 
-	<h3>Data view</h3>
+	<h3>List Data view</h3>
 
-	<div id="dataView"></div>
+	<div id="listDataView"></div>
+
+	<h3>Chart Data view</h3>
+
+	<div id="chartDataView"></div>
 
 	<script type="text/javascript" src="fb.js"></script>
 	<script type="text/javascript" src="fb.session.js"></script>
