--- a/WebContent/sessionInfo.html
+++ b/WebContent/sessionInfo.html
@@ -7,6 +7,7 @@
 <script
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
 </script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
 </head>
 <body>
 	<h3>Session info</h3>
