Added table to organize different data views

--- a/WebContent/sessionInfo.html
+++ b/WebContent/sessionInfo.html
@@ -19,13 +19,24 @@
 
 	<button id="updateViewButton">Update view</button>
 
-	<h3>List Data view</h3>
-
-	<div id="listDataView"></div>
-
-	<h3>Chart Data view</h3>
-
-	<div id="chartDataView"></div>
+	<table>
+		<tr>
+			<th>
+				<h3>List Data view</h3>
+			</th>
+			<th>
+				<h3>Chart Data view</h3>
+			</th>
+		</tr>
+		<tr>
+			<td>
+				<div id="listDataView"></div>
+			</td>
+			<td>
+				<div id="chartDataView" style="width: 600px; height: 300px;"></div>
+			</td>
+		</tr>
+	</table>
 
 	<script type="text/javascript" src="fb.js"></script>
 	<script type="text/javascript" src="fb.session.js"></script>
