createitem - Deleted items button activated on editItem editItem.js, handles editting code cleaned

--- a/WebContent/ItemCreation.html
+++ b/WebContent/ItemCreation.html
@@ -19,9 +19,9 @@
 		<div class="pageLeftMenu">
 			<span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
 				<input type="button" id="home" class="button" value="Home" />
-			</label> <br />
-			<br /> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-				<input type="button" id="itemList" class="button" value="Items" />
+			</label> <br /> <br /> <span>&nbsp;</span><span>&nbsp;</span> <label>
+				<span>&nbsp;</span> <input type="button" id="itemList"
+				class="button" value="Items" />
 			</label> <br />
 
 		</div>
@@ -38,8 +38,7 @@
 					class="button" value="create" />
 				</label>
 			</form>
-			<br />
-			<br />
+			<br /> <br />
 			<table id=items></table>
 
 		</div>
