--- a/WebContent/editItem.html
+++ b/WebContent/editItem.html
@@ -19,9 +19,9 @@
 		<div class="pageLeftMenu">
 			<span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
 				<input type="button" id="home" class="button" value="Home" />
-			</label> <br />
-			<br /> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-				<input type="button" id="itemList" class="button" value="Items" />
+			</label> <br /> <br /> <span>&nbsp;</span><span>&nbsp;</span> <label>
+				<span>&nbsp;</span> <input type="button" id="itemList"
+				class="button" value="Items" />
 			</label> <br />
 
 		</div>
@@ -34,12 +34,11 @@
 				</label> <label> <span>Item Description:</span> <textarea
 						id="itemDescription" name="itemDescription"
 						placeholder="Briefly describe the item"></textarea>
-				</label> <label> <span>&nbsp;</span> <input type="button" id="go"
-					class="button" value="create" />
+				</label> <label> <span>&nbsp;</span> <input type="button" id="edit"
+					class="button" value="Edit" />
 				</label>
 			</form>
-			<br />
-			<br />
+			<br /> <br />
 
 		</div>
 
