--- a/WebContent/editItem.html
+++ b/WebContent/editItem.html
@@ -46,6 +46,6 @@
 
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
-	<script src="editItem.js"></script>
+	<script src="fb.editItem.js"></script>
 </body>
 </html>
