Session creation functional!

--- a/WebContent/configureItem.html
+++ b/WebContent/configureItem.html
@@ -47,9 +47,9 @@
 
 	</div>
 
-	<script src="fb.createItem.js"></script>
+	
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
-	<script src="fb.editItem.js"></script>
+	<script src="fb.configureItem.js"></script>
 </body>
 </html>
