item list page function, give feedback not yet functional, added main.js to handle buttons

--- a/WebContent/giveFeedback.html
+++ b/WebContent/giveFeedback.html
@@ -30,7 +30,7 @@
 
 			<form id="giveFeedbackForm" method="" class="elegant-aero">
 				<h1>Give Feedback</h1>
-				<label> <span>?? :</span> 
+				<label> <span>Select Rating :</span> 
 				<select id="feedbackScale"></select>
 				</label>
 				<br/>
