--- a/WebContent/itemList.html
+++ b/WebContent/itemList.html
@@ -26,6 +26,9 @@
 
 		</div>
 		<div class="pageContent">
+		<br>
+		<h1 style="height: 42px; ">Items</h1> <br/>
+		
 		
 			<table id="itemsToRate"></table>
 
@@ -36,6 +39,7 @@
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
 	<script src="fb.itemList.js"></script>
+	<script src="main.js"></script>
 	
 </body>
 </html>
