new buttons, give feedback page

--- a/WebContent/ItemCreation.html
+++ b/WebContent/ItemCreation.html
@@ -23,6 +23,10 @@
 				<span>&nbsp;</span> <input type="button" id="itemList"
 				class="button" value="Items" />
 			</label> <br />
+			<br /> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+				<input type="button" id="rateItemList" class="button"
+				value="Rate Item" />
+			</label>
 
 		</div>
 		<div class="pageContent">
@@ -34,10 +38,8 @@
 				</label> <label> <span>Item Description:</span> <textarea
 						id="itemDescription" name="itemDescription"
 						placeholder="Briefly describe the item"></textarea>
-				</label>
-				<br/>
-				 <label> <span>&nbsp;</span><span>&nbsp;</span> <input type="button" id="go"
-					class="button" value="Create" />
+				</label> <br /> <label> <span>&nbsp;</span><span>&nbsp;</span> <input
+					type="button" id="go" class="button" value="Create" />
 				</label>
 			</form>
 			<br /> <br />
@@ -50,5 +52,6 @@
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
 	<script src="fb.createItem.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
