--- a/WebContent/configureItem.html
+++ b/WebContent/configureItem.html
@@ -23,6 +23,9 @@
 				<span>&nbsp;</span> <input type="button" id="itemList"
 				class="button" value="Items" />
 			</label> <br />
+			<br /> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+				<input type="button" id="rateItemList" class="button"
+				value="Rate Item" />
 
 		</div>
 		<div class="pageContent">
@@ -49,6 +52,7 @@
 
 	
 	<script src="fb.js"></script>
+	<script src="main.js"></script>
 	<script src="fb.item.js"></script>
 	<script src="fb.configureItem.js"></script>
 </body>
