--- a/WebContent/editItem.html
+++ b/WebContent/editItem.html
@@ -23,6 +23,10 @@
 				<span>&nbsp;</span> <input type="button" id="itemList"
 				class="button" value="Items" />
 			</label> <br />
+			<br /> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+				<input type="button" id="rateItemList" class="button"
+				value="Rate Item" />
+			</label>
 
 		</div>
 		<div class="pageContent">
@@ -45,6 +49,7 @@
 	</div>
 
 	<script src="fb.js"></script>
+	<script src="main.js"></script>
 	<script src="fb.item.js"></script>
 	<script src="fb.editItem.js"></script>
 </body>
