--- a/WebContent/giveFeedback.html
+++ b/WebContent/giveFeedback.html
@@ -31,7 +31,7 @@
 			<form id="giveFeedbackForm" method="" class="elegant-aero">
 				<h1>Give Feedback</h1>
 				<label> <span>Select Rating :</span> 
-				<select id="feedbackScale"></select>
+				<select  id="feedbackScale"></select>
 				</label>
 				<br/>
 				 <label> <span>&nbsp;</span><span>&nbsp;</span> <input type="button" id="go"
@@ -47,6 +47,7 @@
 
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
-	<script src="fb.createItem.js"></script>
+	<script src="fb.session.js"></script>
+	<script src="fb.giveFeedback.js"></script>
 </body>
 </html>
