--- a/WebContent/giveFeedback.html
+++ b/WebContent/giveFeedback.html
@@ -28,10 +28,11 @@
 		<div class="pageContent">
 		
 
-			<form id="giveFeedbackForm" method="" class="elegant-aero">
+			<form id="giveFeedbackForm" method="post" class="elegant-aero">
 				<h1>Give Feedback</h1>
 				<label> <span>Select Rating :</span> 
-				<select  id="feedbackScale"></select>
+				<select id="scale"></select>
+				
 				</label>
 				<br/>
 				 <label> <span>&nbsp;</span><span>&nbsp;</span> <input type="button" id="go"
@@ -39,7 +40,7 @@
 				</label>
 			</form>
 			<br /> <br />
-			<table id=items></table>
+		
 
 		</div>
 
@@ -48,6 +49,6 @@
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
 	<script src="fb.session.js"></script>
-	<script src="fb.giveFeedback.js"></script>
+	<script src="fb.GiveFeedback.js"></script>
 </body>
 </html>
