scale setting working!

--- a/WebContent/giveFeedback.html
+++ b/WebContent/giveFeedback.html
@@ -31,11 +31,13 @@
 			<form id="giveFeedbackForm" method="post" class="elegant-aero">
 				<h1>Give Feedback</h1>
 				<label> <span>Select Rating :</span> 
-				<select id="scale"></select>
+				<select id="scale">
+				<option value="Select Value" />
+				</select>
 				
 				</label>
 				<br/>
-				 <label> <span>&nbsp;</span><span>&nbsp;</span> <input type="button" id="go"
+				 <label> <span>&nbsp;</span><span>&nbsp;</span> <input type="button" id="rate"
 					class="button" value="Rate" />
 				</label>
 			</form>
