give feedback working!

--- a/WebContent/giveFeedback.html
+++ b/WebContent/giveFeedback.html
@@ -31,8 +31,8 @@
 			<form id="giveFeedbackForm" method="post" class="elegant-aero">
 				<h1>Give Feedback</h1>
 				<label> <span>Select Rating :</span> 
-				<select id="scale">
-				<option value="Select Value" />
+				<select name= "value" id="scale">
+				
 				</select>
 				
 				</label>
@@ -49,6 +49,7 @@
 	</div>
 
 	<script src="fb.js"></script>
+	<script src="main.js"></script>
 	<script src="fb.item.js"></script>
 	<script src="fb.session.js"></script>
 	<script src="fb.GiveFeedback.js"></script>
