--- a/WebContent/configureItem.html
+++ b/WebContent/configureItem.html
@@ -26,7 +26,7 @@
 			<br /> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
 				<input type="button" id="rateItemList" class="button"
 				value="Rate Item" />
-
+	</label>
 		</div>
 		<div class="pageContent">
 
@@ -44,7 +44,7 @@
 			</label>
 			</form>
 			
-
+			
 
 		</div>
 
