Create and close feedback sessions pages

--- a/WebContent/createFeedbackSession.html
+++ b/WebContent/createFeedbackSession.html
@@ -9,7 +9,7 @@
 	
 </script>
 
-<title>Configure Item</title>
+<title>Create Session</title>
 <body>
 	<div class="blended_grid">
 		<div class="pageHeader">
