--- a/WebContent/sessionInfoUI.html
+++ b/WebContent/sessionInfoUI.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class="pageContent">
 
-			<div id="sessionInfo"></div>
+			<span id="sessionInfo"></span>
 
 			<div id="dataTypeSelection"></div>
 	<div id="dataViewSelection"></div>
@@ -53,7 +53,8 @@
 				</div>
 		
 
-	</div>
+	</div></div>
+	
 	<script type="text/javascript" src="fb.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript" src="fb.session.js"></script>
