--- a/WebContent/itemList.html
+++ b/WebContent/itemList.html
@@ -13,33 +13,41 @@
 <body>
 	<div class="blended_grid">
 		<div class="pageHeader">
-			<img alt="logo" src="images\oulu.png"
-				style="height: 164px; width: 417px;">
-		</div>
-		<div class="pageLeftMenu">
-			<span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
-				<input type="button" id="home" class="button" value="Home" />
-			</label> <br /> <br /> <span>&nbsp;</span><span>&nbsp;</span> <label>
-				<span>&nbsp;</span> <input type="button" id="update"
-				class="button" value="Update" />
-			</label> <br />
+			<img alt="logo" src="images\oulu.png" align="middle"
+				style="width: 268px; height: 109px" /><br />
+			<br />
 
+			<nav class="testNav">
+				<span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="home" class="button" value="Home" />
+				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="itemList" class="button" value="Items" />
+				</label> <span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
+					<input type="button" id="rateItemList" class="button"
+					value="Rate Item" />
+				</label>
+			</nav>
 		</div>
+
 		<div class="pageContent">
-		<br>
-		<h1 style="height: 42px; ">Items</h1> <br/>
-		
-		
-			<table id="itemsToRate"></table>
+			<div class="pageLeftMenu"></div>
+			<div class="test">
+				<br>
+				<h1>Items</h1>
+				<br />
+
+
+				<table id="itemsToRate"></table>
+
+			</div>
 
 		</div>
-
 	</div>
 
 	<script src="fb.js"></script>
 	<script src="fb.item.js"></script>
 	<script src="fb.itemList.js"></script>
 	<script src="main.js"></script>
-	
+
 </body>
 </html>
