--- a/WebContent/closeFeedbackSession.html
+++ b/WebContent/closeFeedbackSession.html
@@ -14,8 +14,7 @@
 	<div class="blended_grid">
 		<div class="pageHeader">
 			<img alt="logo" src="images\oulu.png" align="middle"
-				style="width: 268px; height: 109px" /><br />
-			<br />
+				style="width: 268px; height: 109px" /><br /> <br />
 
 			<nav class="testNav">
 				<span>&nbsp;</span><span>&nbsp;</span> <label> <span>&nbsp;</span>
@@ -30,25 +29,18 @@
 		</div>
 
 		<div class="pageContent">
-			<div class="pageLeftMenu"></div>
+			
 			<div class="test">
-
-
-				<form id="closeSessionForm" method="post" class="basic-grey">
+				<div class="sessionDetailsContainer">
 					<h1>Close Feedback Session</h1>
-					<label> <span>Start Value :</span> <input name="startValue"
-						id="startValue" type="number"
-						placeholder="Input scale start value" />
-					</label><br /> <label> <span>End Value:</span> <input
-						id="endValue" name="endValue" type="number"
-						placeholder="Input scale end value"></input>
-					</label> <br /> <label> <span>Interval:</span> <input
-						id="interval" name="interval" type="number"
-						placeholder="Input scale interval"></input>
-					</label> <br /> <label> <span>&nbsp;</span> <input type="button"
-						id="closeSession" class="button" value="Close Session" />
-					</label>
-				</form>
+					<br /> <span id="startValue"></span> <br /> <br /> <span
+						id="endValue"></span> <br /> <br /> <span id="interval"></span> <br />
+					<br /> <span>&nbsp;</span> <input type="button" id="closeSession"
+						class="button" value="Close Session" />
+
+
+				</div>
+
 
 
 
