--- a/WebContent/createFeedbackSession.html
+++ b/WebContent/createFeedbackSession.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-
+<link href="popup.css" rel="stylesheet" type="text/css">
 <script
 	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
 	
@@ -59,8 +59,9 @@
 
 
 	<script src="fb.js"></script>
-	<script src="main.js"></script>
+	
 	<script src="fb.item.js"></script>
 	<script src="fb.configureItem.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
