added sessions button and created static login page

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -41,15 +41,15 @@
 		</div>
 		<div class="test">
 
-			<form id="createItemForm" method="post" class="basic-grey">
-				<h1>Item Creation</h1>
-				<label> <span>Item Name :</span> <input name="itemName"
-					id="itemName" type="text" placeholder="Input Item Name" />
-				</label> <label> <span>Item Description:</span> <textarea
-						id="itemDescription" name="itemDescription"
-						placeholder="Briefly describe the item"></textarea>
+			<form id="userLoginForm" method="post" class="basic-grey">
+				<h1>Login</h1>
+				<label> <span>Email :</span> <input name="userEmail"
+					id="userEmail" type="email" placeholder="Input your email" />
+				</label> <label> <span>Password:</span> <input
+						id="userPassword" name="userPassword" type="password"
+						placeholder="Input password"></input>
 				</label> <br /> <label> <span>&nbsp;</span><span>&nbsp;</span> <input
-					type="button" id="go" class="button" value="Create" />
+					type="button" id="login" class="button" value="Login" />
 				</label>
 			</form>
 			<br /> <br />
