item info page, commenting and removing the item id from tables

--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -23,7 +23,7 @@
 				value="Home" />
 			</label> <span>&nbsp;</span> <span>&nbsp;</span> <label> <span>&nbsp;</span>
 				<input type="button" id="updateViewButton" class="button"
-				value="Update View" />
+				value="Current Session" />
 			</label> </nav>
 		</div>
 
@@ -35,7 +35,7 @@
 				<br /> <br /> <br /> <br />
 				<div class="sessionInfo" id="sessionCont">
 				<br/>
-				<h1 style="width: 300px;">All Sessions</h1>
+				<h1 style="width: 300px;">Previous Sessions</h1>
 					<div class="sessionInfo" id="sessionArchive"> 
 					
 					</div>
