Start / Stop auto-update working

--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -49,6 +49,9 @@
 				<h1>Chart View</h1>
 				<div>
 					<input type="button" id="updateViewButton" value="Update view" />
+					<input type="button" id="startAutoUpdateButton"
+						value="Start auto-update" /> <input type="button"
+						id="stopAutoUpdateButton" value="Stop auto-update" />
 					<div id="chartDataView"></div>
 				</div>
 
