--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class="listCont">
 					<h1 style="width: 300px;">Feedback Units</h1>
-					<div id="listDataView" class="listDataView"></div>
+					<div id="listDataView" class="dataView"></div>
 				</div>
 			</div>
 			<div class="test_graphpage">
@@ -53,7 +53,7 @@
 					<input type="button" id="startAutoUpdateButton"
 						value="Start auto-update" /> <input type="button"
 						id="stopAutoUpdateButton" value="Stop auto-update" />
-					<div id="chartDataView"></div>
+					<div id="chartDataView" class="dataView"></div>
 				</div>
 
 			</div>
