Chosing data strategy for a graphs now working

--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -45,14 +45,17 @@
 				</div>
 			</div>
 			<div class="test_graphpage">
-
-
 				<h1>Chart View</h1>
 				<div>
 					<input type="button" id="updateViewButton" value="Update view" />
 					<input type="button" id="startAutoUpdateButton"
 						value="Start auto-update" /> <input type="button"
-						id="stopAutoUpdateButton" value="Stop auto-update" />
+						id="stopAutoUpdateButton" value="Stop auto-update" /> <select
+						id="selectDataStrategy" name="name">
+						<option value="none">None</option>
+						<option value="average">Average</option>
+					</select>
+
 					<div id="chartDataView" class="dataView"></div>
 				</div>
 
