Get current average value for a data set: working

--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -54,6 +54,7 @@
 						id="selectDataStrategy" name="name">
 						<option value="none">None</option>
 						<option value="average">Average</option>
+						<option value="singleAverage">Single average</option>
 					</select>
 
 					<div id="chartDataView" class="dataView"></div>
