--- a/WebContent/itemInfo.html
+++ b/WebContent/itemInfo.html
@@ -43,7 +43,7 @@
 
 			<div class="test_graphpage">
 
-				<h1>Chart View</h1>
+				<h1>Data View</h1>
 
 				<div id="updateContainer">
 					<input type="button" id="updateViewButton" value="Update view" />
